# AOGLE

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: AOGLE.hpp  AOGLE_Camera.hpp  AOGLE_Debug.hpp  AOGLE_Logger.hpp  AOGLE_Mesh.hpp  AOGLE_Renderer.hpp  AOGLE_Shader.hpp  AOGLE_Window.hpp
include/AOGLE/: AOGLE.hpp  Camera.hpp  Debug.hpp  Event.hpp  Input.hpp  Logger.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp  Time.hpp  Window.hpp
src/: AOGLE_Camera.cpp  AOGLE_Debug.cpp  AOGLE_Logger.cpp  AOGLE_Mesh.cpp  AOGLE_Renderer.cpp  AOGLE_Shader.cpp  AOGLE_Window.cpp  main.cpp
src/AOGLE/: Camera.cpp  Debug.cpp  Input.cpp  Logger.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Time.cpp  Window.cpp
